--- a/OneDrive/Documents/GitHub/usepopcorn/src/index.css
+++ b/OneDrive/Documents/GitHub/usepopcorn/src/index.css
@@ -25,7 +25,7 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
   color: var(--color-text);
-  /* background-color: var(--color-background-900); */
+  background-color: var(--color-background-900);
   padding: 2.4rem;
 }
 
@@ -54,7 +54,7 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
-  overflow: hidden;
+  overflow: scroll;
   position: relative;
 }
 
@@ -138,7 +138,7 @@ body {
 .list {
   list-style: none;
   padding: 0.8rem 0;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .list-watched {
